<resources>
    <string name="app_name">TraSea</string>
    <string name="button_name">Sign in</string>
    <string name="sign_in">Sign in with email</string>
    <string name="or_login">Or continue with one of these options</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="gmail">Continue with Gmail</string>
    <string name="signUp">Sign up?</string>
    <string name="newCreate">New Account</string>
    <string name="facebook_app_id">866853430718782</string>
    <string name="fb_login_protocol_scheme">fb866853430718782</string>
    <string name="edit_profile">Edit Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ChangeAva">Change Profile Photo</string>
    <string name="switchTo">Switch to Professional Account</string>
    <string name="infoPersontal">Personal Information Settings</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="note_name">You\'ll be able to change tour username back to </string>
    <string name="note_name_continue"> for another 14 days </string>
    <string name="note_username">Help people discover your account by using the
        name you\'re known by: either your full name, nickname, or
        .\n \nYou cna only change your name twice within 14 days</string>

</resources>